# crypto-risk-profiling-hybrid

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
prompts/: summarize_sentiment.txt
src/com.lingenhag.rrp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/com/lingenhag/rrp/: main.py
src/com/lingenhag/rrp/domain/: interfaces.py  models.py
src/com/lingenhag/rrp/features/llm/application/: ports.py
src/com/lingenhag/rrp/features/llm/infrastructure/: ensemble_client.py  gemini_client.py  openai_client.py  xai_client.py
src/com/lingenhag/rrp/features/llm/presentation/: cli_commands.py
src/com/lingenhag/rrp/features/market/application/: ports.py  rollup_utils.py
src/com/lingenhag/rrp/features/market/infrastructure/: coingecko_client.py
src/com/lingenhag/rrp/features/market/presentation/: cli_commands.py
src/com/lingenhag/rrp/features/news/application/: factories.py  news_query_builder.py  ports.py  ports_asset_registry.py
src/com/lingenhag/rrp/features/news/infrastructure/: gdelt_client.py  google_news_resolver.py  google_news_rss_client.py  search_query.py
src/com/lingenhag/rrp/features/news/presentation/: cli_commands.py
src/com/lingenhag/rrp/platform/config/: settings.py
src/com/lingenhag/rrp/platform/monitoring/: metrics.py
src/com/lingenhag/rrp/platform/persistence/: migrator.py
src/com/lingenhag/rrp/platform/persistence/migrations/: 001_news_init.sql  002_llm_init.sql  (+5 more)
tests/: test_hello.py
tests/features/news/: conftest.py  test_duckdb_news_repository.py  test_harvest_urls.py  test_news_query_builder.py
(+17 files in other folders)
