# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rrp-profile"
version = "0.1.0"
description = "Return-Risk Profiling of Cryptocurrencies with Quant + GenAI"
dependencies = [
    "duckdb>=1.0.0",
    "requests>=2.31.0",
    "pytest>=7.4.0",
    "pytest-mock>=3.11.1",
    "openai>=1.0.0",  # Für LLM
    "google-generativeai>=0.3.0",  # Gemini
    "playwright>=1.40.0",  # Resolver
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src/com/lingenhag/rrp --cov-report=html"
